--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 
 <head>
-  <script src="/index.js"></script>
   <meta charset="utf-8" />
   <link rel="icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="A contact manager site." />
-  <link rel="manifest" href="./manifest.json" />
+  <script type="text/javascript" src="js/code.js"></script>
   <title>Contact Manager</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="app">Test!</div>
+  <div style="display:none;" id="homepage"></div>
 </body>
 
 </html>
