--- a/contacts.html
+++ b/contacts.html
@@ -8,12 +8,14 @@
 	<meta name="theme-color" content="#000000" />
 	<meta name="description" content="A contact manager site." />
 	<script type="text/javascript" src="js/code.js"></script>
+	<script type="text/javascript" src="js/mask.js"></script>
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 	<script type="text/javascript">
 		document.addEventListener('DOMContentLoaded', function () {
 			//readCookie();
+			inputMaskSetup.init();
 		}, false);
 	</script>
 
@@ -36,8 +38,8 @@
 				<div style="display:none;" id="contactList">
 					<div style="display:none;" class="no-height" id="mainContactContent">
 						<div id="contactHeader">
-							<div>First Name</div>
-							<div>Last Name</div>
+							<div>Name</div>
+							<div>Phone</div>
 							<div>Email</div>
 							<div>Options</div>
 						</div>
@@ -64,8 +66,8 @@
 			</div>
 			<div style="display:none;" id="addContactDialog">
 				<div id="inputForm" class="input-form no-height">
-					<input type="text" id="contactFirstName" placeholder="First Name">
-					<input type="text" id="contactLastName" placeholder="Last Name">
+					<input type="text" id="contactName" placeholder="Name">
+					<input type="text" id="contactPhone" default-placeholder="Phone" class="phone-number-masked">
 					<input type="text" id="contactEmail" placeholder="Email">
 					<button type="button" id="addContactButton" class="btn btn-success buttons"
 						onclick="addContact();">Add</button>
