--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
 	<script>
 
 	</script>
-	<div id="logInDiv" class="contact-content">
+	<div id="mainDiv" class="contact-content">
 		<div>
 			<span id="inner-title">Contacts</span>
 			<div id="accessUIDiv">
@@ -30,11 +30,14 @@
 				<span id="contactSearchResult"></span>
 				<div style="display:none;" id="contactList">
 					<div style="display:none;" class="no-height" id="mainContactContent">
-						<div id="contactHeader">
+						<div class="contactHeader desktop">
 							<div>Name</div>
 							<div>Phone</div>
 							<div>Email</div>
 							<div>Options</div>
+						</div>
+						<div class="contactHeader mobile">
+							<div>Information</div>
 						</div>
 						<div id="contactItems"></div>
 					</div>
