--- a/login.html
+++ b/login.html
@@ -13,15 +13,19 @@
 </head>
 
 <body class="background flex">
-    <div id="loginDiv">
+    <div id="mainDiv">
         <span id="inner-title">Welcome</span>
-        <input type="text" id="loginName" placeholder="Username" /><br />
-        <input type="password" id="loginPassword" placeholder="Password" /><br />
-        <span id="loginResult"></span>
-        <button type="button" id="loginButton" class="btn btn-primary" onclick="doLogin();">Login</button>
-        <hr class="form-hr" />
-        <span class="sub-title">New around here?</span>
-        <a class="btn-success btn button" href="./register.html">Create Account</a>
+        <div class="group-stack">
+            <input type="text" id="loginName" placeholder="Username" /><br />
+            <input type="password" id="loginPassword" placeholder="Password" /><br />
+            <span id="loginResult"></span>
+            <button type="button" id="loginButton" class="btn btn-primary" onclick="doLogin();">Login</button>
+        </div>
+        <div class="group-stack">
+            <hr class="form-hr" />
+            <span class="sub-title">New around here?</span>
+            <a class="btn-success btn button" href="./register.html">Create Account</a>
+        </div>
     </div>
 </body>
 
